crates/widgets/tests/unit/snapshots/main__unit__screen_snapshots__the_key_hints_and_layout_rows_shape_the_whole_frame@Hidden_Auto.snap
---
source: crates/widgets/tests/unit/screen_snapshots.rs
assertion_line: 143
expression: text
---
"                                                                                                                        "
"          ╭ Zefiro ──────────────────────────────────────────────────────────────────────────────────────────╮          "
"          │                                                                                                  │          "
"          │  No track                                                                            ■ Stopped   │          "
"          │                                                                                                  │          "
"          │  00:00 / 00:00  » 1×                                                                             │          "
"          │                                                                                                  │          "
"          │  ─────────────────────────────────────────────────────────────────────────────────────────────   │          "
"          │  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                             │          "
"          │  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                             │          "
"          │  ⣀⣀⣀⡀⣀⣀⣀⡀⣀⣀⣀⣀⢀⣀⣀⣀⢀⣀⣀⣀⢀⣀⣀⣀⡀⣀⣀⣀⡀⣀⣀⣀⣀⢀⣀⣀⣀⢀⣀⣀⣀⢀⣀⣀⣀⡀⣀⣀⣀⡀⣀⣀⣀⡀⣀⣀⣀⣀⢀⣀⣀⣀⢀⣀⣀⣀⡀  ████████████████████████   │          "
"          │                                                                                                  │          "
"          ╰──────────────────────────────────────────────────────────────────────────────────────────────────╯          "
"          ┏ Library ── 1/3 ── shuffle off · repeat off · queue 0 · theme noir ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓          "
"          ┃    Test Artist — song00                                                                          ┃          "
"          ┃    Test Artist — song01                                                                          ┃          "
"          ┃    Test Artist — song02                                                                          ┃          "
"          ┃                                                                                                  ┃          "
"          ┃                                                                                                  ┃          "
"          ┃                                                                                                  ┃          "
"          ┃                                                                                                  ┃          "
"          ┃                                                                                                  ┃          "
"          ┃                                                                                                  ┃          "
"          ┃                                                                                                  ┃          "
"          ┃                                                                                                  ┃          "
"          ┃                                                                                                  ┃          "
"          ┃                                                                                                  ┃          "
"          ┃                                                                                                  ┃          "
"          ┃                                                                                                  ┃          "
"          ┃                                                                                                  ┃          "
"          ┃                                                                                                  ┃          "
"          ┃                                                                                                  ┃          "
"          ┃                                                                                                  ┃          "
"          ┃                                                                                                  ┃          "
"          ┃                                                                                                  ┃          "
"          ┃                                                                                                  ┃          "
"          ┃                                                                                                  ┃          "
"          ┃                                                                                                  ┃          "
"          ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛          "
"                                                                                                                        "
