crates/widgets/tests/unit/snapshots/main__unit__screen_snapshots__the_key_hints_name_the_keys_of_the_tab@local_with_a_server.snap
---
source: crates/widgets/tests/unit/screen_snapshots.rs
expression: hints
---
"           Space  Play  Enter  Open  a  Queue  Tab  Sources  /  Find  ?/Ctrl+K  Help  q  Quit                           "
