crates/widgets/tests/unit/snapshots/main__unit__screen_snapshots__the_key_hints_name_the_keys_of_the_tab@server_albums_top.snap
---
source: crates/widgets/tests/unit/screen_snapshots.rs
expression: hints
---
"           Space  Play  Enter  Open  Tab  Sources  v  View  o  Order  /  Find  ?/Ctrl+K  Help  q  Quit                  "
