crates/widgets/tests/unit/snapshots/main__unit__screen_snapshots__the_key_hints_name_the_keys_of_the_tab@server_inside_a_playlist.snap
---
source: crates/widgets/tests/unit/screen_snapshots.rs
expression: hints
---
"           Space  Play  Enter  Open  Tab  Sources  v  View  Backspace  Back  /  Find  ?/Ctrl+K  Help  q  Quit           "
