crates/widgets/tests/unit/snapshots/main__unit__screen_snapshots__the_key_hints_name_the_keys_of_the_tab@server_songs_top.snap
---
source: crates/widgets/tests/unit/screen_snapshots.rs
assertion_line: 170
expression: hints
---
"           Space  Play  Enter  Open  a  Queue  Tab  Sources  v  View  /  Find  ?/Ctrl+K  Help  q  Quit                  "
